# pointcloud-benchmark

./: AbstractQuerier.py  QueriesParameters.py  QueryParameters.py  README.md  lidaroverview.py  quadtree.py  utils.py
docker/: Dockerfile  install.sh  install_centos.sh  install_ubuntu.sh
ini/: lastools.ini  monetdb.ini  oracleblocks.ini  oracleblocksglob.ini  oracleblocksglobal.ini  oracleblocksincremental.ini  oracleflat.ini  postgresblocks.ini  postgresflat.ini
install/: INSTALL  README.md
install/centos6/: 1_postgresql  2_postgresql_postgis_pointcloud  3_pointcloud  4_lastools  5_monetdb  6_oracle  README  README.md  export_paths.sh  install_liblas  install_optional_lasnlesc  install_optional_lastools_close  install_optional_monetdb  install_optional_oracle  install_optional_pdal  install_optional_postgis_pointcloud  install_postgis_pointcloud_psql_extension  install_required
install/centos7/: INSTALL  README.md  install_optional_lasnlesc  install_optional_lastools_close  install_optional_monetdb  install_optional_pdal  install_optional_postgis_pointcloud  install_optional_postgresql  install_required
install/monetdbpatch/: MortonContainsAnalyze.diff  README.md  contains_patch  morton_patch
install/oraclelinux7/: INSTALL  README.md  install_optional_lastools_close  install_optional_pdal  install_required
install/ubuntu1404/: INSTALL  README.md  install_optional_pdal  install_optional_postgis_pointcloud  install_optional_postgresql  install_required
lasnlesc/: CMakeLists.txt  INSTALL.md  README  README.md
lasnlesc/apps/: CMakeLists.txt  las2col.c  las2colDec.c  las2pg.c  las2txt.c  lasNLeSC-config.in  lasNLeSC.pc.in  vox2txt.c
lasnlesc/cmake/modules/: FindlibLAS.cmake
lasnlesc/config/: lasNLeSC_config.sh
lasnlesc/doc/: index.txt
lasnlesc/src/: decodemorton.c
lastools/: Querier.py
monetdb/: AbstractQuerier.py  CommonMonetDB.py  LoaderBinary.py  QuerierMorton.py
oracle/: AbstractLoader.py  AbstractQuerier.py
oracle/blocks/: Loader.py  LoaderExt.py  LoaderIncOrdered.py
oracle/flat/: Loader.py  LoaderExt.py  QuerierMorton.py
postgres/flat/: LoaderBinaryC.py  Querier.py  QuerierMorton.py
python/pcviewer/: generate_tiles.py
python/pointcloud/: AbstractLoader.py  AbstractQuerier.py  QuadTree.py  QueriesParameters.py  QueryParameters.py  dbops.py  lasops.py  lastoolsops.py  lidaroverview.py  monetdbops.py  morton.py  oracleops.py  pdal_xml.py  pdalops.py  postgresops.py  qtops.py  tabulate.py  utils.py  wktops.py
python/pointcloud/lastools/: CommonLASTools.py  Loader.py  Querier.py
python/pointcloud/monetdb/: AbstractQuerier.py  CommonMonetDB.py  LoaderBinary.py  Querier.py  QuerierMorton.py
python/pointcloud/oracle/: AbstractLoader.py  AbstractQuerier.py  CommonOracle.py
python/pointcloud/oracle/blocks/: Loader.py  LoaderExt.py  LoaderInc.py  LoaderIncOrdered.py  LoaderPDAL.py  Querier.py  QuerierPDAL.py
python/pointcloud/oracle/blocks/glob/: Loader.py  LoaderExt.py
python/pointcloud/oracle/blocks/global/: Loader.py  LoaderExt.py
python/pointcloud/oracle/blocks/incremental/: LoaderInc.py  LoaderIncOrdered.py  LoaderPDAL.py
python/pointcloud/oracle/flat/: Loader.py  LoaderExt.py  Querier.py  QuerierMorton.py
python/pointcloud/postgres/: AbstractLoader.py  AbstractQuerier.py  CommonPostgres.py
python/pointcloud/postgres/blocks/: Loader.py  LoaderMorton.py  LoaderOrdered.py  Querier.py  QuerierMorton.py  QuerierPDAL.py  schemaALL_NOCOLOR_NOTIME.xml  schemaXYZ.xml
python/pointcloud/postgres/flat/: LoaderASCII.py  LoaderBinary.py  LoaderBinaryPython.py  Querier.py  QuerierMorton.py
python/pointcloud/run/: get_multi_user_results.py  load_pc.py  plot_usage.py  query_pc.py
python/pointcloud/run/queries/: generate_queries.py
python/pointcloud/run/results/: get_load_results.py  get_query_results.py  plot_inc_speed.py  plot_mem.py  plot_oracle_inc_wspeed.py
queries/: queries_20M.xml  queries_210M.xml  queries_2201M.xml  queries_23090M.xml  queries_23090M_q01_0100.xml  queries_23090M_q02_0100.xml  queries_23090M_q03_0100.xml  queries_23090M_q05_0100.xml  queries_23090M_q15_0100.xml  queries_640B.xml  test_queries_20M.xml
run/: generate_queries_xml.py  get_load_results.py  get_query_results.py  monitor_mem.py  plot_io.py  plot_mem.py  plot_oracle_inc_wspeed.py  plot_results.py  prepare_lastools_dms.py  query_lastools_dms.py  query_pc.py
sfcnlesc/: CMakeLists.txt  INSTALL  INSTALL_PYTHON  README  compile_c
sfcnlesc/src/: CMakeLists.txt  pysfcnlesc.pxd  pysfcnlesc.pyx  setup.py  sfcnlesc.cc  sfcnlesc.h  sfcnlesc_c.c  test_vector.c  vector.c  vector.h
sfcnlesc/test/data/: q1.wkt  q2.wkt  q3.wkt  q4.wkt  q5.wkt  q6.wkt  q7.wkt
